--- a/src/components/projects/styles/project.css
+++ b/src/components/projects/styles/project.css
@@ -1,26 +1,23 @@
 @import "../../../data/styles.css";
 
-.project {
+.project-container {
 	mix-blend-mode: normal;
 	border-radius: 20px;
 	opacity: 0.8;
 	height: 100%;
 }
 
-.project a {
+.project-container a {
 	text-decoration: none;
 }
 
-.project:hover {
+.project-container:hover {
 	background: #fafafa;
 	opacity: 1;
 	transition: background-color 0.3s ease-in-out;
 }
 
-.project:hover .project-link {
-	color: var(--link-color);
-	transition: color 0.3s ease-in-out;
-}
+
 
 .project-container {
 	padding: 30px;
@@ -51,7 +48,7 @@
 	display: flex;
 	align-items: center;
 	color: var(--secondary-color);
-	font-size: 12px;
+	font-size: 15px;
 	padding-top: 20px;
 }
 
